--- a/NcasCardSys/cardsys_app_ui/pubspec.yaml
+++ b/NcasCardSys/cardsys_app_ui/pubspec.yaml
@@ -1,5 +1,5 @@
-name: ncas_app_ui
-description: Complete ui for ncas card system app
+name: cardsys_app_ui
+description: Ncas Card Sys App UI
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
@@ -28,7 +28,6 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.1
-  motion_tab_bar: ^0.1.5
 
 dev_dependencies:
   flutter_test:
@@ -48,6 +47,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
      - assets/img/img.png
+     - assets/img/logo.png
+  #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
